@@ -1,6 +1,7 @@
 Version 1.0-svn
 
 * do not check /etc/hosts in dnsbl check
+* -u command line option to run grossd with a differnet uid
 
 Issues fixed:
 #71: grossd dies under Linux
